Introduce generalized traversal through dependencies