@@ -162,6 +162,11 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+		  <configuration>
+			<forkCount>3</forkCount>
+			<reuseForks>true</reuseForks>
+			<argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+		  </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
